
Language files listed under each version were made by the author beside them, and then
modified by me for consistency/bug fixing.

Please send any bug reports to BenBE@omorphia.de, or use the bug report tracker
at sourceforge (http://sourceforge.net/tracker/?group_id=114997&atid=670231)

Version 1.0.8.9
  -  Added language files
     * Algol68 (Neville Dempsey)
     * FormulaOne (Juro Bystricky)
Version 1.0.8.8
  -  Added language files
     * ChaiScript (Jason Turner & Jonathan Turner)
     * Genie (Nicolas Joseph)
     * GwBasic (José Gabriel Moya Yangüela)
     * HicEst (Georg Petrich)
     * Icon (Matt Oates)
     * MagikSF (Sjoerd van Leent)
     * Modula 2 (Benjamin Kowarsch)
     * Oz (Wolfgang Meyer)
     * PCRE (BenBE)
     * PostgreSQL (Christophe Chauvet)
     * q/kdb+ (Ian Roddis)
     * RPM Specification Files (Paul Grinberg)
     * Unicon (Matt Oates)
     * Vala (Nicolas Joseph)
     * XBasic (José Gabriel Moya Yangüela)
  -  Improvements to language files (BenBE)
     * Major reworks and improvements to OCaml language file (BenBE)
     * Removed duplicate entries from keyword groups of VIM language file (Segaja)
     * Properly protect Regexps against GeSHi Black Magic in Matlab (BenBE)
     * Added support for Block Comments in PowerShell (BenBE)
     * Added some keywords for VB; split into multiple groups (leejkennedy, BenBE)
     * Basic Heredoc Support for Ruby (BenBE)
Version 1.0.8.7
  -  Added language files
     * Autoconf (Mihai Vasilian)
     * ECMAScript (Michel Mariani)
     * J (Ric Sherlock)
     * OpenBSD Packet Filter (David Berard)
     * Oxygene / Delphi Prism (Carlo Kok)
  -  Minor change in INT_BASIC number regexp to support '..' range operator
     as to be found in most Pascal-like languages (BenBE)
  -  Fixed an issue with Hardquotes for empty strings (like '' in Delphi) (BenBE)
  -  Introduced a fix for improved performance when matching numbers (BenBE)
  -  Improvements to language files (BenBE)